--- a/Baitap4/index.html
+++ b/Baitap4/index.html
@@ -34,25 +34,25 @@
     </header>
 
 
-    <main>
+    <main class="container">
         <div class="row">
             <figure class="col-lg-3">
-                <img src="123.jpg" class="img-thumbnail">
+                <img src="./boostrap/123.jpg" class="img-thumbnail">
                 <figcaption>IMAGE CAPTION HERE </figcaption>
             </figure>
 
             <figure class="col-lg-3">
-                <img src="123.jpg" class="img-thumbnail">
+                <img src="./boostrap/123.jpg" class="img-thumbnail">
                 <figcaption>IMAGE CAPTION HERE </figcaption>
             </figure>
 
             <figure class="col-lg-3">
-                <img src="123.jpg" class="img-thumbnail">
+                <img src="./boostrap/123.jpg" class="img-thumbnail">
                 <figcaption>IMAGE CAPTION HERE </figcaption>
             </figure>
 
             <figure class="col-lg-3">
-                <img src="123.jpg" class="img-thumbnail">
+                <img src="./boostrap/123.jpg" class="img-thumbnail">
                 <figcaption>IMAGE CAPTION HERE </figcaption>
             </figure>
         </div>
@@ -69,7 +69,7 @@
             <div class="col-lg-8 footer-img">
                 <section class="quater1">
                     <figure>
-                        <img src="123.jpg" alt="Image 1" class="img-thumbnail">
+                        <img src="./boostrap/123.jpg" alt="Image 1" class="img-thumbnail">
     
                     </figure>
                     <figcaption>
@@ -85,7 +85,7 @@
 
                 <section class="quater2">
                     <figure>
-                        <img src="123.jpg" alt="Image 2" class="img-thumbnail">
+                        <img src="./boostrap/123.jpg" alt="Image 2" class="img-thumbnail">
     
                     </figure>
                     <figcaption>
